// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css @supports 1`] = `
@supports (display: grid) {
  .glamor-0 {
    display: grid;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css composes 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css composes with objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: block;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.glamor-0:hover {
  color: blue;
}

.glamor-0:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .glamor-0 {
    color: green;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css composes with undefined values 1`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css composition stuff 1`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css composition stuff 2`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css computed key is only dynamic 1`] = `
.glamor-0 {
  font-size: 10px;
  width: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`css css variables 1`] = `
.glamor-0 {
  --some-var: 1px;
  width: var(--some-var);
}

<div
  className="glamor-0"
/>
`;

exports[`css flushes correctly 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css flushes correctly 2`] = `
<div
  className="css-71uu79"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css handles objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: blue;
  font-size: 20px;
  height: 50px;
  width: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`css nested array 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css nested at rules 1`] = `
@media (min-width: 420px) {
  .glamor-0 {
    color: pink;
  }
}

@media (min-width: 420px) and  (max-width: 500px) {
  .glamor-0 {
    color: hotpink;
  }
}

@supports (display: grid) {
  .glamor-0 {
    display: grid;
  }
}

@supports (display: grid) and  ((display: -webkit-box) or (display: flex)) {
  .glamor-0 {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css null rule 1`] = `
<div
  className="css-nil"
/>
`;

exports[`css random expression 1`] = `
.glamor-0 {
  margin: 12px 48px;
  font-size: 32px;
  color: #ffffff;
}

@media (min-width: 420px) {
  .glamor-0 {
    width: 96px;
    height: 96px;
  }
}

<div
  className="glamor-0"
/>
`;
